--- a/arch/arm/boot/dts/qcom/nitrogen-sdm636.dtsi
+++ b/arch/arm/boot/dts/qcom/nitrogen-sdm636.dtsi
@@ -57,3 +57,17 @@
 		};
 	};
 };
+
+
+&firmware {
+     android {
+         fstab {
+            system {
+                fsmgr_flags = "wait";
+            };
+	        vendor {
+                fsmgr_flags = "wait";
+            };
+        };
+    };
+};
