--- a/arch/arm64/configs/platina_defconfig
+++ b/arch/arm64/configs/platina_defconfig
@@ -583,8 +583,8 @@ CONFIG_MSM_TIMER_LEAP=y
 CONFIG_IOMMU_IO_PGTABLE_FAST=y
 CONFIG_ARM_SMMU=y
 CONFIG_IOMMU_DEBUG=y
-CONFIG_IOMMU_DEBUG_TRACKING=y
-CONFIG_IOMMU_TESTS=y
+# CONFIG_IOMMU_DEBUG_TRACKING is not set
+# CONFIG_IOMMU_TESTS is not set
 CONFIG_QCOM_COMMON_LOG=y
 CONFIG_MSM_SMEM=y
 CONFIG_QPNP_HAPTIC=y
@@ -711,7 +711,7 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SMACK=y
 CONFIG_CRYPTO_ECHAINIV=y
 CONFIG_CRYPTO_XCBC=y
-CONFIG_CRYPTO_MD4=y
+# CONFIG_CRYPTO_MD4 is not set
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
